--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css">
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css" integrity="sha384-DyZ88mC6Up2uqS4h/KRgHuoeGwBcD4Ng9SiP4dIRy0EXTlnuz47vAwmeGwVChigm" crossorigin="anonymous">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/hover.css/2.1.1/css/hover-min.css" type="text/css" />
   <link rel="stylesheet" href="assets/css/style.css">
   <title>Rosie</title>
 </head>
@@ -24,16 +25,16 @@
           <div class="col">
             <ul id="nav" class="list-inline menucontainer">
               <li class="col-6 col-sm-3 list-inline-item ui-menu-color-home menuitem">
-                <a href="#"><i class="fas fa-home" aria-hidden="true"></i><span>Home</span></a>
+                <a href="#" class="hvr-sweep-to-bottom"><i class="fas fa-home" aria-hidden="true"></i><span>Home</span></a>
               </li>
               <li class="col-6 col-sm-3 ui-menu-color-resume list-inline-item menuitem">
-                <a href="#"><i class="fas fa-graduation-cap" aria-hidden="true"></i><span>Resume</span></a>
+                <a href="#" class="hvr-sweep-to-bottom"><i class="fas fa-graduation-cap" aria-hidden="true"></i><span>Resume</span></a>
               </li>
               <li class="col-6 col-sm-3 ui-menu-color-contact list-inline-item menuitem">
-                <a href="#"><i class="far fa-comment" aria-hidden="true"></i><span>Contact</span></a>
+                <a href="#" class="hvr-sweep-to-bottom"><i class="far fa-comment" aria-hidden="true"></i><span>Contact</span></a>
               </li>
               <li class="col-6 col-sm-3 ui-menu-color-download list-inline-item menuitem">
-                <a href="#"><i class="fas fa-download" aria-hidden="true"></i><span>Download</span></a>
+                <a href="#" class="hvr-sweep-to-bottom"><i class="fas fa-download" aria-hidden="true"></i><span>Download</span></a>
               </li>
             </ul>
           </div>
